Fixing view overlap bug with card view

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -36,11 +36,6 @@
   .hero-image {
     height: 550px;
   }
-  
-  .card {
-    width: 100%;
-    height: 65px;
-  }
 }
 
 @media only screen and (min-width: 1264px) {
